# cuda-ffi-types

./: Cargo.toml  build.rs  copy_gensrc.sh
src/: lib.rs
src/v10_0/: _cuda.rs  _cuda_fp16.rs  _cuda_runtime_api.rs  _driver_types.rs
src/v6_5/: _cuda.rs
src/v7_0/: _cuda.rs
src/v7_5/: _cuda.rs
src/v8_0/: _cuda.rs  _cuda_runtime_api.rs  _driver_types.rs  _library_types.rs
src/v9_0/: _cuda.rs  _cuda_fp16.rs  _cuda_runtime_api.rs  _driver_types.rs
src/v9_1/: _cuda.rs
src/v9_2/: _cuda.rs  _cuda_runtime_api.rs  _driver_types.rs
